Fixes assets being in the compile path preventing server run from working.